--- a/SunnyMore/assets/css/style.css
+++ b/SunnyMore/assets/css/style.css
@@ -365,6 +365,9 @@ video {
   height: auto;
 }
 
+.logo img {
+    width: 56px;
+}
 /* Make elements with the HTML hidden attribute stay hidden by default */
 [hidden] {
   display: none;
