--- a/SunnyMore/assets/css/style.css
+++ b/SunnyMore/assets/css/style.css
@@ -368,6 +368,10 @@ video {
 .logo img {
     width: 56px;
 }
+
+.offcanvas-logo {
+    width: 48px;
+}
 /* Make elements with the HTML hidden attribute stay hidden by default */
 [hidden] {
   display: none;
