--- a/SunnyMore/assets/css/style.css
+++ b/SunnyMore/assets/css/style.css
@@ -2335,6 +2335,9 @@ a {
   .md\:right-\[170px\] {
     right: 170px;
   }
+  .md\:col-span-4 {
+    grid-column: span 4/span 4;
+  }
   .md\:col-span-6 {
     grid-column: span 6/span 6;
   }
